# aruco-for-robot-navigation

./: .gitmodules  .vimrunner  ArucoDetector.py  README.md  api.py  aruco_detector.py  broadcaster.py  calibrate.py  calibration_chessboard.yaml  cam.py  capturer.py  controller.py  debug.sh  debug_controller.py  detect_aruco.py  generate_aruco.py  hello.py  httpserver.py  index.html  pathfinding.py  pose_estimation.py  pyproject.toml  real_controller.py  requirements.txt  robot.py  run.sh  util.py
control/: .app.py.swp  .robot.py.swp  app.py  robot.py
