[project]
name = "aruco-for-robot-navigation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.5",
    "opencv-contrib-python>=4.10.0",
    "opencv-python>=4.10.0",
    "rpi-gpio>=0.7.1",
    "scipy>=1.14.1",
    "uvicorn>=0.32.1",
    "websockets>=14.1",
]
